<resources>
    <string name="app_name">UHF-RFID</string>
    <string name="logo">logo</string>
    <string name="icon">ikona</string>

    //create profile
    <string name="sign_up">Zarejestruj się</string>
    <string name="login">Zaloguj się</string>
    <string name="synchronize">Czy chcesz, aby pobrać zachowane dane?</string>
    <string name="password_length">Hasło za krótkie, min. 6 znaków!</string>
    <string name="synchro_good">Kopia zapasowa została utworzona.</string>
    <string name="synchro_bad">Synchronizacja nie powiodła się. Spróbuj ponownie pózniej.</string>
    <string name="auth_failed">Autoryzacja nie powiodła się. Spróbuj ponownie.</string>
    <string name="auth_failed_early">Usługa chwilowo niedostępna. Spróbuj ponownie później.</string>
    <string name="email_already_used">Zły adres email lub istnieje już inne konto powiązane z tym adresem.</string>
    <string name="bad_email">Zły e-mail lub hasło. Spróbuj ponownie.</string>
    <string name="correct_update">Zaktualizowano pomyślnie.</string>
    <string name="failed_update">Nie udało się zaktualizować. Spróbuj ponownie.</string>
    <string name="try_again">Nie udało się. Spróbuj ponownie.</string>
    <string name="loading">ładuję…</string>

    <string name="complete_all">Uzupełnij wszystkie dane!</string>
    <string name="profile_saved">Zapisano profil.</string>
    <string name="profile_updated">Zaktualizowano profil</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="name">Imię i Nazwisko</string>
    <string name="others">Inne</string>
    <string name="google_authorization">konto Google</string>
    <string name="profile">Szczegóły konta</string>
    <string name="create_new_account">Stwórz nowe konto w aplikacji i bądź na zawsze gotowy do wyjścia ze wszystkim czego potrzebujesz.</string>
    <string name="log_in_start">Zaloguj się i zabieraj ze sobą rzeczy, któych potrzebujesz</string>
    <string name="use_email_password">E-mail i hasło</string>
    <string name="next">Dalej</string>
    <string name="log_out">wyloguj</string>
    <string name="loged_out">Pomyślnie wylogowano.</string>
    <string name="logout_confirm">Czy na pewno chcesz sie wylogować?</string>
    <string name="save">Zapisz</string>
    <string name="device_id"> Idetyfikator urządzenia RFID</string>
    <string name="info_rule">Identyfikator znajdziesz tam i tam</string>

    // new device
    <string name="add_device">Dodaj urządzenie monitorujące</string>
    <string name="device_intro">Możesz to zrobić skanując kod QR lub wpisując ręcznie jego identyfikator z urządzenia</string>
    <string name="use_qr">Skanuj kod QR</string>
    <string name="use_text">Wpisz identyfikator</string>
    <string name="identifier">Identyfikator</string>
    <string name="device_saved">Zapisano urządzenie monitorujące.</string>

    // qr code
    <string name="read_qr">Odczytany QR kod:</string>
    <string name="ok">OK</string>
    <string name="scanner">Nakieruj kamerę na kod QR</string>

    // new item
    <string name="add_item">Dodaj element do monitorowania</string>
    <string name="item_intro">Możesz to zrobić skanując kod QR lub wpisując ręcznie jego identyfikator z urządzenia</string>
    <string name="item_saved">Zapisano element do monitorowania.</string>
    <string name="item_name">Nazwa</string>
    <string name="bad_id">Zły kod identyfikujący!</string>

    // main titles
    <string name="skip">Pomiń</string>
    <string name="title_items">Statusy</string>
    <string name="title_profile">Profil</string>
    <string name="title_rules">Reguły</string>
    <string name="google_error">Błąd usług Google. Aplikacja nie będzie działać prawidłowo.</string>

    //item fragment
    <string name="title_text_items">Monitorowane \nelementy</string>
    <string name="title_tag">Tag:</string>
    <string name="title_status">Status:</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="change_status">Zmień status</string>

    //rule fragment
    <string name="title_text_rule">Zapisane \nreguły</string>
    <string name="contain_items">Dotyczy elementów:</string>
    <string name="time_slot">Slot czasowy:</string>
    <string name="priorytet">(*) priorytet</string>

    //profile fragment
    <string name="title_text_profile">Mój \nprofil</string>
    <string name="title_text_profile_my_devices">Połączone urządzenia monitorujące</string>
    <string name="change">Zmień</string>
    <string name="no_device">brak</string>

    // cloud messaging
    <string name="notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_channel_name" translatable="true">RFID</string>
    <string name="fcm_message">FCM Message</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="notification_channel_description">Item reminder</string>

    //new rule
    <string name="add_rule">Dodaj regułę</string>
    <string name="rule_intro">Reguły służą do łączenia elementów w grupy i schematyzowania zachowań. Okreś przedziały czasowe dla reguły i elementy, o których chcesz pamiętać.</string>
    <string name="rule_saved">Utworzono nową regułę.</string>
    <string name="rule_name">Nazwa</string>
    <string name="start">Od:</string>
    <string name="stop">Do:</string>
    <string name="elements">Dodaj elementy:</string>
    <string name="priority">Wybierz priorytetowy element:</string>

    //delete
    <string name="delete_accept_item">Czy na pewno chcesz usunąć element?</string>
    <string name="delete_accept_rule">Czy na pewno chcesz usunąć regułe?</string>
    <string name="delete">Usuwanie</string>
    <string name="deleted">Usunięto.</string>
    <string name="not_deleted">Nie udało się.</string>


</resources>